Send events to a Discord channel